# neural-net

./: .gitignore  Cargo.toml  README.md
crates/engine/nn/: Cargo.toml
crates/engine/nn-bench/: Cargo.toml
crates/engine/nn-bench/examples/: burn.rs  candle.rs  dfdx.rs  ndarray_mm.rs  nn_gpu.rs  nn_own.rs  tch.rs
crates/engine/nn-bench/src/: lib.rs
crates/engine/nn/bench_results/: CUDA_SETUP.md  README.md  burn.json  candle.json  candle_cuda.json  dfdx.json  ndarray_mm.json  nn_gpu_oneshot.json  nn_gpu_pooled.json  nn_parallel.json  scalar.json  simd.json  viz.html
crates/engine/nn/examples/: build_viz.rs  matmul_bench.rs  viz_template.html
crates/engine/nn/src/: init.rs  lib.rs  rng.rs  wasm.rs
crates/engine/nn/src/activation/: mod.rs
crates/engine/nn/src/autograd/: mod.rs  op.rs
crates/engine/nn/src/backend/: cpu.rs  gpu.rs  mod.rs  parallel.rs  simd.rs
crates/engine/nn/src/checkpoint/: mod.rs  native.rs
crates/engine/nn/src/loss/: mod.rs
crates/engine/nn/src/math/: mod.rs  stable.rs
crates/engine/nn/src/module/: linear.rs  mod.rs  sequential.rs  visitor.rs
crates/engine/nn/src/optim/: mod.rs
crates/engine/nn/src/tensor/: mod.rs  shape.rs
crates/engine/nn/src/train/: callbacks.rs  mod.rs
crates/engine/nn/tests/: checkpoint.rs  determinism.rs  gpu_matmul.rs  grad_check.rs  hot_swap.rs  linreg.rs  xor.rs
